--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContactAddViewModel
+﻿@model ContactUpdateViewModel
 
     <style>
         .add-model {
@@ -29,7 +29,7 @@
             </header>
             <hr />
             <div class="panel-body add-body">
-                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Add" method="post" enctype="multipart/form-data">
+                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Update" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <div class="col-lg-10">
                             <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE">
