--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -42,8 +42,7 @@
                             <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Content</th>
                             <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Image</th>
                             <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Create Date</th>
-                            <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Update</th>
-                            <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Delete</th>
+                            <th class="sorting edit-delete" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Edit: activate to sort column ascending" style="width: 87px;">#</th>
                         </tr>
                     </thead>
 
@@ -57,8 +56,10 @@
                                     <td class=" ">@item.Content</td>
                                     <td class=" "><img width="50" height="60" src="@item.Imagepath" alt="Alternate Text" /></td>
                                     <td class=" ">@item.CreateDate</td>
-                                    <td><a class="edit btn btn-primary about-button" asp-route-id="@item.Id" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Edit">Edit</a></td>
-                                    <td class=" "><a class="btn btn-danger delete delete-blog" asp-route-id="@item.Id" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Delete">Delete</a></td>
+                                    <td class="edit-delete">
+                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Update" asp-route-id="@item.Id">Edit</a> |
+                                        <a class="delete delete-about about-button" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                    </td>
                                 </tr>
                             }
                         }
