--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
@@ -42,8 +42,7 @@
                             <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Name</th>
                             <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending" style="width: 177px;">Tittle</th>
                             <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Image</th>
-                            <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Edit: activate to sort column ascending" style="width: 87px;">Edit</th>
-                            <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Delete: activate to sort column ascending" style="width: 128px;">Delete</th>
+                            <th class="sorting edit-delete" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Edit: activate to sort column ascending" style="width: 87px;">#</th>
                         </tr>
                     </thead>
 
@@ -56,8 +55,10 @@
                                     <td class="sorting_1">@item.Name</td>
                                     <td class=" ">@item.Tittle</td>
                                     <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
-                                    <td class=" "><a class="edit btn btn-primary about-button" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
-                                    <td class=" "><a class="btn btn-danger delete deleteService about-button" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                                    <td class="edit-delete">
+                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Update" asp-route-id="@item.Id">Edit</a> |
+                                        <a class="delete delete-about about-button" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                    </td>
                                 </tr>
                             }
                         }
