--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -12,10 +12,8 @@
         margin-top: 45px !important;
         background-color: RGB(241, 242, 247) !important;
     }
-    .about-button:hover {
-        background-color: black !important;
-        border-color: black;
-        color: #fff;
+    .edit-delete {
+        text-align: center;
     }
 </style>
 
