--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Index.cshtml
@@ -20,7 +20,9 @@
         border-color: black;
         color: #fff;
     }
-
+    .edit-delete {
+        text-align: center;
+    }
     .edit:hover {
         border-color: black;
     }
@@ -60,8 +62,8 @@
                                     <td class=" ">@item.Position</td>
                                     <td class=" ">@item.Content</td>
                                     <td class="edit-delete">
-                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Update" asp-route-id="@item.id">Edit</a> |
-                                        <a class="delete delete-about about-button" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Update" asp-route-id="@item.id">Edit</a> |
+                                        <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Delete" asp-route-id="@item.id">Delete</a>
                                     </td>
                                 </tr>
                             }
