--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -18,6 +18,13 @@
     .edit-delete{
         text-align: center;
     }
+
+    .about-button:hover {
+        background-color: black !important;
+        border-color: black;
+        color: #fff;
+    }
+
     .edit:hover {
         border-color: black;
     }
@@ -58,7 +65,7 @@
                                     <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a> |
-                                        <a class="delete delete-about about-button" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                        <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                                     </td>
                                 </tr>
                             }
