--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
@@ -18,6 +18,13 @@
         .edit-delete {
             text-align: center;
         }
+
+        .about-button:hover {
+            background-color: black !important;
+            border-color: black;
+            color: #fff;
+        }
+
     </style>
 
     <section class="panel common">
@@ -53,7 +60,7 @@
                                         <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
                                         <td class="edit-delete">
                                             <a class="edit" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Update" asp-route-id="@item.Id">Edit</a> |
-                                            <a class="delete delete-about about-button" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                            <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                                         </td>
                                     </tr>
                                 }
