--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -64,8 +64,7 @@
                                     <td class=" ">@item.Content</td>
                                     <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
                                     <td class="edit-delete">
-                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a> |
-                                        <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a>
                                     </td>
                                 </tr>
                             }
