About, blog, Project-de Update shekillerinin olchulerin boyutdum

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
@@ -74,7 +74,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <img src="@Model.ImagePath" alt="Alternate Text" />
+                            <img src="@Model.ImagePath" width="240" height="280" alt="Alternate Text" />
                         </div>
                     </div>
                     <div class="form-group">
