--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -62,7 +62,7 @@
                                     <td class=" "><img width="50" height="60" src="@item.Imagepath" alt="Alternate Text" /></td>
                                     <td class=" ">@item.CreateDate</td>
                                     <td class="edit-delete">
-                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Update" asp-route-id="@item.Id">Edit</a> |
+                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                                         <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                                     </td>
                                 </tr>
