textarealarin rows-larini artirdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Update.cshtml
@@ -47,17 +47,17 @@
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentAz" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
+                            <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" required="" placeholder="Content ENG"></textarea>
+                            <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" required="" placeholder="Content ENG"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
+                            <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
