Service-in textarealarin rows-larin artirdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
@@ -53,17 +53,17 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <textarea type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE"></textarea>
+                            <textarea type="text" asp-for="TittleAz" rows="15" id="f-name" class="form-control" placeholder="Title AZE"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <textarea type="text" asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG"></textarea>
+                            <textarea type="text" asp-for="TittleEn" rows="15" id="f-name" class="form-control" placeholder="Title ENG"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <textarea type="text" asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU"></textarea>
+                            <textarea type="text" asp-for="TittleRu" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
