--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
@@ -45,18 +45,17 @@
                             </div>
                             <div class="form-group ">
                                 <div class="col-lg-10">
-                                    <input placeholder="Tittle AZE" class="form-control " id="ccomment" name="TittleAz" required="" />
+                                    <textarea placeholder="Tittle AZE" rows="15" class="form-control " id="ccomment" name="TittleAz" required=""></textarea>
                                 </div>
                             </div>
                             <div class="form-group ">
                                 <div class="col-lg-10">
-                                    <input placeholder="Tittle ENG" class="form-control " id="ccomment" name="TittleEn" required="" />
+                                    <textarea placeholder="Tittle ENG" rows="15" class="form-control " id="ccomment" name="TittleEn" required=""></textarea>
                                 </div>
                             </div>
                             <div class="form-group ">
-
                                 <div class="col-lg-10">
-                                    <input placeholder="Tittle RU" class="form-control " id="ccomment" name="TittleRu" required="" />
+                                    <textarea placeholder="Tittle RU" rows="15" class="form-control " id="ccomment" name="TittleRu" required=""></textarea>
                                 </div>
                             </div>
                             <div class="form-group">
