--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
 
     <title>Construction - @ViewData["Title"]</title>
     <meta name="description" content="Template built for Construction Company, Building Services, Architecture, Engineering, Cleaning Service and other Construction related services">
-    <meta name="keywords" content=" architecture, builder, building, building company, cleaning services, construction, construction business, construction company">
+    @*<meta name="keywords" content=" architecture, builder, building, building company, cleaning services, construction, construction business, construction company">*@
+    @await Component.InvokeAsync("Metadata")
     <meta name="author" content="blogwp.com">
 
     <!-- Mobile Specific Metas -->
