--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -5,16 +5,16 @@
 
 <head>
     <!-- Basic Page Needs -->
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
 
     <title>Construction - @ViewData["Title"]</title>
-    <meta name="description" content="Template built for Construction Company, Building Services, Architecture, Engineering, Cleaning Service and other Construction related services">
-    @*<meta name="keywords" content=" architecture, builder, building, building company, cleaning services, construction, construction business, construction company">*@
-    @await Component.InvokeAsync("Metadata")
-    <meta name="author" content="blogwp.com">
+    @*<meta name="description" content="Template built for Construction Company, Building Services, Architecture, Engineering, Cleaning Service and other Construction related services" metapage="name"/>*@
+    <meta name="description" metapage />
+
+    <meta name="author" content="blogwp.com" />
 
     <!-- Mobile Specific Metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!-- Theme Style -->
     <link rel="stylesheet" type="text/css" href="~/style.css">
@@ -28,7 +28,7 @@
     <!-- Favicon and touch icons  -->
     <link rel="shortcut icon" href="~/assets/img/logo-light.png">
     <link rel="apple-touch-icon-precomposed" href="~/assets/icon/apple-touch-icon-158-precomposed.png" />
-  
+
     <style>
         body::-webkit-scrollbar {
             width: 8px;
