--- a/ConstructionSite/Views/Shared/Components/Metadata/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Metadata/Default.cshtml
@@ -1,9 +1,8 @@
 ﻿@model IEnumerable<ServiceMetaData>
 @inject SharedLocalizationService Localizer
 
-    <meta name="keywords" content="@foreach (var item in Model)
-    {
-        item.Name
-    }
-    ">
-
+<meta name="description" content=@foreach (var item in Model)
+{
+    @String.Join(' ',item.Name)
+}
+/>
