--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
@@ -56,17 +56,17 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="ContentAz" id="f-name" class="form-control" placeholder="Content AZE">
+                            <textarea type="text" asp-for="ContentAz" rows="15" id="f-name" class="form-control" placeholder="Content AZE"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="ContentEn" id="f-name" class="form-control" placeholder="Content ENG">
+                            <textarea type="text" asp-for="ContentEn" rows="15" id="f-name" class="form-control" placeholder="Content ENG"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="ContentRu" id="f-name" class="form-control" placeholder="Content RU">
+                            <textarea type="text" asp-for="ContentRu" rows="15" id="f-name" class="form-control" placeholder="Content RU"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
