inputlarin olchusunu deyish

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
@@ -37,27 +37,27 @@
                     <input type="hidden" name="Id" value="@Model.Id" />
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="FullName" class="form-control " id="ccomment" placeholder="Full Name"></textarea>
+                            <input asp-for="FullName" class="form-control " id="ccomment" placeholder="Full Name" />
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="Position" class="form-control " id="ccomment" placeholder="Position"></textarea>
+                            <input asp-for="Position" class="form-control " id="ccomment" placeholder="Position" />
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentAz" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
+                            <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" placeholder="Content ENG"></textarea>
+                            <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" placeholder="Content ENG"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
+                            <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
                         </div>
                     </div>
                     <div class="form-group" style="margin-left: 63%;">
