--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
@@ -2,7 +2,6 @@
 
 <style>
     .add-model {
-        margin-left: 20px;
         background-color: rgb(241,242, 247);
     }
     .add-model header {
@@ -18,60 +17,61 @@
         color: #fff;
     }
 </style>
-
-<div class="row">
-    <div class="col-lg-12">
-        <section class="panel add-model">
-            <header class="panel-heading">
-                Add About Elements
-            </header>
-            <hr />
-            <div class="panel-body add-body">
-                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" method="post" enctype="multipart/form-data">
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input asp-for="TittleAz" id="f-name" class="form-control" placeholder="Tittle AZE" required>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <section class="panel add-model">
+                <header class="panel-heading">
+                    Add About Elements
+                </header>
+                <hr />
+                <div class="panel-body add-body">
+                    <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" method="post" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input asp-for="TittleAz" id="f-name" class="form-control" placeholder="Tittle AZE" required>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input asp-for="TittleEn" id="f-name" class="form-control" placeholder="Tittle Eng" required>
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input asp-for="TittleEn" id="f-name" class="form-control" placeholder="Tittle Eng" required>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Tittle RU" required>
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Tittle RU" required>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
+                        <div class="form-group ">
+                            <div class="col-lg-12">
+                                <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" required="" placeholder="Content ENG"></textarea>
+                        <div class="form-group ">
+                            <div class="col-lg-12">
+                                <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" required="" placeholder="Content ENG"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
+                        <div class="form-group ">
+                            <div class="col-lg-12">
+                                <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="file" name="FileData" placeholder="Images" id="f-name" class="form-control" required>
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="file" name="FileData" placeholder="Images" id="f-name" class="form-control" required>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group" style="margin-left: 63%;">
-                        <div class="col-lg-offset-2 col-lg-10" >
-                            <button class="btn btn-success about-button" type="submit">Save</button>
-                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
+                        <div class="form-group" style="margin-left: 63%;">
+                            <div class="col-lg-offset-2 col-lg-12">
+                                <button class="btn btn-success about-button" type="submit">Save</button>
+                                <button class="btn btn-default cancel-button" type="button">Cancel</button>
+                            </div>
                         </div>
-                    </div>
-                </form>
-            </div>
-        </section>
+                    </form>
+                </div>
+            </section>
+        </div>
     </div>
 </div>
 
