--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
 
     <title>Construction - @ViewData["Title"]</title>
     @*<meta name="description" content="Template built for Construction Company, Building Services, Architecture, Engineering, Cleaning Service and other Construction related services" metapage="name"/>*@
-    <meta name="description" metapage />
-
+    <meta name="description"  descriptions />
+    <meta name="keywords" metapage/>
     <meta name="author" content="blogwp.com" />
 
     <!-- Mobile Specific Metas -->
