--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
@@ -6,4 +6,4 @@
 <li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Index" style="font-size: 1.1em;">Projects</a></li>
 <li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Index" style="font-size: 1.1em;">Contact</a></li>
 <li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Index" style="font-size: 1.1em;">Testimonial</a></li>
-<li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Message" asp-action="Index" style="font-size: 1.1em;">Messages</a></li>
+<li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Messages" asp-action="Index" style="font-size: 1.1em;">Messages</a></li>
