--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
@@ -3,6 +3,7 @@
 <style>
     .add-model {
         background-color: rgb(241,242, 247);
+        padding-left: 7%;
     }
     .add-model header {
         height: 30px;
@@ -27,43 +28,43 @@
                 <hr />
                 <div class="panel-body add-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" method="post" enctype="multipart/form-data">
-                        <div class="form-group">
-                            <div class="col-lg-12">
+                        <div class="form-group row">
+                            <div class="col-lg-11">
                                 <input asp-for="TittleAz" id="f-name" class="form-control" placeholder="Tittle AZE" required>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-lg-12">
+                        <div class="form-group row">
+                            <div class="col-lg-11">
                                 <input asp-for="TittleEn" id="f-name" class="form-control" placeholder="Tittle Eng" required>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-lg-12">
+                        <div class="form-group row">
+                            <div class="col-lg-11">
                                 <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Tittle RU" required>
                             </div>
                         </div>
-                        <div class="form-group ">
-                            <div class="col-lg-12">
+                        <div class="form-group row">
+                            <div class="col-lg-11">
                                 <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
                             </div>
                         </div>
-                        <div class="form-group ">
-                            <div class="col-lg-12">
+                        <div class="form-group row">
+                            <div class="col-lg-11">
                                 <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" required="" placeholder="Content ENG"></textarea>
                             </div>
                         </div>
-                        <div class="form-group ">
-                            <div class="col-lg-12">
+                        <div class="form-group row">
+                            <div class="col-lg-11">
                                 <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-lg-12">
+                        <div class="form-group row">
+                            <div class="col-lg-11">
                                 <input type="file" name="FileData" placeholder="Images" id="f-name" class="form-control" required>
                             </div>
                         </div>
-                        <div class="form-group" style="margin-left: 84%;">
-                            <div class="col-lg-offset-2 col-lg-12">
+                        <div class="form-group row" style="margin-left: 84%;">
+                            <div class="col-lg-offset-2 col-lg-11">
                                 <button class="btn btn-success about-button" type="submit">Save</button>
                                 <button class="btn btn-default cancel-button" type="button">Cancel</button>
                             </div>
