--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Update.cshtml
@@ -3,6 +3,7 @@
     <style>
         .add-model {
             background-color: rgb(241,242, 247);
+            padding-left: 7%;
         }
 
             .add-model header {
