--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Add.cshtml
@@ -3,6 +3,7 @@
     <style>
         .add-model {
             background-color: rgb(241,242, 247);
+            padding-left: 7%;
         }
 
             .add-model header {
@@ -31,7 +32,6 @@
                     <div class="panel-body add-body">
                         <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Add" method="post" enctype="multipart/form-data">
                             <div class="form-group">
-
                                 <div class="col-lg-12">
                                     <input type="text" asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
                                 </div>
