--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
@@ -3,6 +3,7 @@
 <style>
     .add-model {
         background-color: rgb(241,242, 247);
+        padding-left: 7%;
     }
 
     .add-model header {
@@ -40,37 +41,37 @@
                         <input type="hidden" asp-for="ProjectId" />
                         <input type="hidden" asp-for="ImageId" />
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="text" asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea type="text" asp-for="ContentAz" rows="15" id="f-name" class="form-control" placeholder="Content AZE"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea type="text" asp-for="ContentEn" rows="15" id="f-name" class="form-control" placeholder="Content ENG"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea type="text" asp-for="ContentRu" rows="15" id="f-name" class="form-control" placeholder="Content RU"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <select class="select-portfolio" asp-for="PortfolioId">
                                     @foreach (var item in ViewBag.items)
                                     {
@@ -80,17 +81,17 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <img src="@Model.ImagePath" width="240" height="280" alt="Alternate Text" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="file" name="file" id="f-name" class="form-control" placeholder="Images">
                             </div>
                         </div>
                         <div class="form-group" style="margin-left: 84%;">
-                            <div class="col-lg-offset-2 col-lg-12">
+                            <div class="col-lg-offset-2 col-lg-11">
                                 <button class="btn btn-success about-button" type="submit">Save</button>
                                 <button class="btn btn-default cancel-button" type="button">Cancel</button>
                             </div>
