--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
@@ -1,6 +1,7 @@
 ﻿<style>
     .add-model {
         background-color: rgb(241,242, 247);
+        padding-left: 7%;
     }
 
         .add-model header {
@@ -29,42 +30,42 @@
                 <div class="panel-body add-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Add" method="post" enctype="multipart/form-data">
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="text" name="NameAz" placeholder="Name AZE" id="f-name" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="text" name="NameEn" placeholder="Name ENG" id="f-name" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="text" name="NameRu" placeholder="Name RU" id="f-name" class="form-control">
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea placeholder="Tittle AZE" rows="15" class="form-control " id="ccomment" name="TittleAz" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea placeholder="Tittle ENG" rows="15" class="form-control " id="ccomment" name="TittleEn" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea placeholder="Tittle RU" rows="15" class="form-control " id="ccomment" name="TittleRu" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="file" name="FileData" placeholder="Images" id="f-name" class="form-control">
                             </div>
                         </div>
                         <div class="form-group" style="margin-left: 84%;">
-                            <div class="col-lg-offset-2 col-lg-12">
+                            <div class="col-lg-offset-2 col-lg-11">
                                 <button class="btn btn-success about-button" type="submit">Save</button>
                                 <button class="btn btn-default cancel-button" type="button">Cancel</button>
                             </div>
