--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
@@ -6,6 +6,7 @@
 <style>
     .add-model {
         background-color: rgb(241,242, 247);
+        padding-left: 7%;
     }
 
         .add-model header {
@@ -36,48 +37,48 @@
                         <input type="hidden" name="ImageId" value="@Model.ImageId" />
                         <input type="hidden" name="id" value="@Model.id" />
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input asp-for="NameAz" class="form-control " id="ccomment" placeholder="Name AZE" />
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input asp-for="NameEn" class="form-control " id="ccomment" placeholder="Name ENG" />
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input asp-for="NameRu" class="form-control " id="ccomment" placeholder="Name RU" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea type="text" asp-for="TittleAz" rows="15" id="f-name" class="form-control" placeholder="Title AZE"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea type="text" asp-for="TittleEn" rows="15" id="f-name" class="form-control" placeholder="Title ENG"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea type="text" asp-for="TittleRu" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <img src="@Model.path" width="240" height="280" alt="Alternate Text" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="file" name="file" placeholder="Images" id="f-name" class="form-control" />
                             </div>
                         </div>
 
                         <div class="form-group" style="margin-left: 84%;">
-                            <div class="col-lg-offset-2 col-lg-12">
+                            <div class="col-lg-offset-2 col-lg-11">
                                 <button class="btn btn-success about-button" type="submit">Save</button>
                                 <button class="btn btn-default cancel-button" type="button">Cancel</button>
                             </div>
