--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -3,6 +3,7 @@
 <style>
     .add-model {
         background-color: rgb(241,242, 247);
+        padding-left: 7%;
     }
 
     .add-model header {
@@ -31,37 +32,37 @@
                 <div class="panel-body add-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Add" method="post" enctype="multipart/form-data">
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="text" asp-for="NameAz" id="f-name" class="form-control" required="" placeholder="Name AZE">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea class="form-control " id="ccomment" asp-for="ContentAz" rows="15" required="" placeholder="Content AZE"></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea class="form-control " id="ccomment" asp-for="ContentEn" rows="15" required="" placeholder="Content ENG"></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea class="form-control " id="ccomment" asp-for="ContentRu" rows="15" required="" placeholder="Content RU"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <select class="form-control m-bot15" asp-for="ServiceId">
                                     @foreach (ServiceSubServiceAddView item in ViewBag.data)
                                     {
@@ -71,12 +72,12 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
                             </div>
                         </div>
                         <div class="form-group" style="margin-left: 84%;">
-                            <div class="col-lg-offset-2 col-lg-12">
+                            <div class="col-lg-offset-2 col-lg-11">
                                 <button class="btn btn-success about-button" type="submit">Save</button>
                                 <button class="btn btn-default cancel-button" type="button">Cancel</button>
                             </div>
