--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
@@ -5,6 +5,7 @@
 <style>
     .add-model {
         background-color: rgb(241,242, 247);
+        padding-left: 7%;
     }
 
     .add-model header {
@@ -36,47 +37,47 @@
                         <input type="hidden" asp-for="ServerId" />
                         <input type="hidden" asp-for="imageId" />
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea asp-for="ContentAz" rows="15" class="form-control" id="ccomment" placeholder="Content AZE"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" placeholder="Content ENG"></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <img src="@Model.ImagePath" width="240" height="280" alt="Alternate Text" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
                             </div>
                         </div>
                         <div class="form-group" style="margin-left: 84%;">
-                            <div class="col-lg-offset-2 col-lg-12">
+                            <div class="col-lg-offset-2 col-lg-11">
                                 <button class="btn btn-success about-button" type="submit">Save</button>
                                 <button class="btn btn-default cancel-button" type="button">Cancel</button>
                             </div>
