--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Add.cshtml
@@ -3,6 +3,7 @@
     <style>
         .add-model {
             background-color: rgb(241,242, 247);
+            padding-left: 7%;
         }
 
             .add-model header {
@@ -31,32 +32,32 @@
                     <div class="panel-body add-body">
                         <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Add" method="post">
                             <div class="form-group">
-                                <div class="col-lg-12">
+                                <div class="col-lg-11">
                                     <input asp-for="FullName" id="f-name" class="form-control" required placeholder="Full Name">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-lg-12">
+                                <div class="col-lg-11">
                                     <input asp-for="Position" id="f-name" class="form-control" required placeholder="Position">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-lg-12">
+                                <div class="col-lg-11">
                                     <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-lg-12">
+                                <div class="col-lg-11">
                                     <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" required="" placeholder="Content ENG"></textarea>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-lg-12">
+                                <div class="col-lg-11">
                                     <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
                                 </div>
                             </div>
                             <div class="form-group" style="margin-left: 84%;">
-                                <div class="col-lg-offset-2 col-lg-12">
+                                <div class="col-lg-offset-2 col-lg-11">
                                     <button class="btn btn-success about-button" type="submit">Save</button>
                                     <button class="btn btn-default cancel-button" type="button">Cancel</button>
                                 </div>
