--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
@@ -6,6 +6,7 @@
 <style>
     .add-model {
         background-color: rgb(241,242, 247);
+        padding-left: 7%;
     }
 
         .add-model header {
@@ -35,32 +36,32 @@
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Update" method="post" enctype="multipart/form-data">
                         <input type="hidden" name="Id" value="@Model.Id" />
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input asp-for="FullName" class="form-control " id="ccomment" placeholder="Full Name" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <input asp-for="Position" class="form-control " id="ccomment" placeholder="Position" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" placeholder="Content ENG"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-12">
+                            <div class="col-lg-11">
                                 <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
                             </div>
                         </div>
                         <div class="form-group" style="margin-left: 84%;">
-                            <div class="col-lg-offset-2 col-lg-12">
+                            <div class="col-lg-offset-2 col-lg-11">
                                 <button class="btn btn-success about-button" type="submit">Save</button>
                                 <button class="btn btn-default cancel-button" type="button">Cancel</button>
                             </div>
