Areas-in Index-lerindekishekillerinin olchusunu deyishdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -25,7 +25,9 @@
         border-color: black;
         color: #fff;
     }
-
+    .img-style {
+        text-align: center;
+    }
 </style>
 
 <section class="panel common">
@@ -59,7 +61,7 @@
                                 <tr class="odd">
                                     <td class=" ">@item.Title</td>
                                     <td class=" ">@item.Content</td>
-                                    <td class=" "><img width="50" height="60" src="@item.Imagepath" alt="Alternate Text" /></td>
+                                    <td class="img-style"><img width="120" height="160" src="@item.Imagepath" alt="Alternate Text" /></td>
                                     <td class=" ">@item.CreateDate</td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
