--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -28,6 +28,10 @@
     .edit:hover {
         border-color: black;
     }
+
+    .img-style{
+        text-align: center;
+    }
 </style>
 
 <section class="panel common">
@@ -35,7 +39,6 @@
         About Elements Table
     </header>
     <hr />
-
     <div class="panel-body">
         <div class="button-create">
             <a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" class="btn about-button" style=" color: #fff; background-color: #ffc925;" >Create New About Element</a>
@@ -62,7 +65,7 @@
 
                                     <td class="sorting_1">@item.Tittle</td>
                                     <td class=" ">@item.Content</td>
-                                    <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
+                                    <td class="img-style"><img src="@item.Image" width="120" height="160" alt="Alternate Text" /></td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a>
                                     </td>
