--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
@@ -25,7 +25,9 @@
         border-color: black;
         color: #fff;
     }
-
+    .img-style {
+        text-align: center;
+    }
 </style>
 
 <section class="panel common">
@@ -60,8 +62,8 @@
 
                                     <td class="sorting_1">@item.Name</td>
                                     <td class=" ">@item.Content</td>
-                                    <td class="">
-                                        <img width="100" height="100" src="@item.ImagePath" alt="Alternate Text" />
+                                    <td class="img-style">
+                                        <img width="120" height="160" src="@item.ImagePath" alt="Alternate Text" />
                                     </td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Update" asp-route-id="@item.Id">Edit</a> |
